Fixed layout problem in locale compare view.

--- a/webapp/workplaceThemes/VAADIN/themes/opencms/_opencms.scss
+++ b/webapp/workplaceThemes/VAADIN/themes/opencms/_opencms.scss
@@ -713,6 +713,7 @@
 		.o-sitemap-tree-node-right {
 			-ms-flex: 1; 
 			flex: 1; 
+			min-width: 0px;
 		}
 		
 		.o-sitemap-tree-node-children { 
